@@ -243,7 +243,7 @@ void GraphicsScene::mouseMoveEvent ( QGraphicsSceneMouseEvent *mouseEvent ) {
 }
 
 void GraphicsScene::mouseReleaseEvent ( QGraphicsSceneMouseEvent *mouseEvent ) {
-    qDebug() << __PRETTY_FUNCTION__;
+//     qDebug() << __PRETTY_FUNCTION__;
     if ( line != 0 ) {
         QList<QGraphicsItem *> startItems = items ( line->line().p1() );
         if ( startItems.count() && startItems.first() == line )
@@ -261,9 +261,6 @@ void GraphicsScene::mouseReleaseEvent ( QGraphicsSceneMouseEvent *mouseEvent ) {
                   endItems.first()->type() == DataType::PORT ) {
             Port *startItem = qgraphicsitem_cast<Port *> ( startItems.first() );
             Port *endItem   = qgraphicsitem_cast<Port *> ( endItems.first() );
-            qDebug() << "mouseReleaseEvent number, type, direction";
-            qDebug() << startItem->portNumber() << startItem->portType() << startItem->portDirection();
-            qDebug() << endItem->portNumber() << endItem->portType() << endItem->portDirection();
 
             model->insertConnection ( startItem->index(), endItem->index() );
         }
